# cmd/api/controllers/module.go
@@ -1,14 +1,24 @@
 package controllers
 
 import (
+	"fmt"
 	"github.com/SaltaGet/NOA-GESTION-BACK/internal/schemas"
 	"github.com/SaltaGet/NOA-GESTION-BACK/internal/validators"
 	"github.com/gofiber/fiber/v2"
 	"github.com/rs/zerolog/log"
-	"fmt"
 )
 
-
+// ModuleGet godoc
+//
+//	@Summary		ModuleGet
+//	@Description	Obtener un modulo por ID
+//	@Tags			Module
+//	@Accept			json
+//	@Produce		json
+//	@Security		CookieAuth
+//	@Param			id	path		string											true	"ID of ExpenseOther"
+//	@Success		200	{object}	schemas.Response{body=schemas.ModuleResponse}	"ExpenseOther obtained successfully"
+//	@Router			/api/v1/module/get/{id} [get]
 func (m *ModuleController) ModuleGet(c *fiber.Ctx) error {
 	id := c.Params("id")
 	if id == "" {
@@ -31,6 +41,15 @@ func (m *ModuleController) ModuleGet(c *fiber.Ctx) error {
 	})
 }
 
+// ModuleGetAll godoc
+//
+//	@Summary		ModuleGetAll
+//	@Description	Obtener todos los modulos
+//	@Tags			Module
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	schemas.Response{body=[]schemas.ModuleResponse}	"ExpenseOther obtained successfully"
+//	@Router			/api/v1/module/get_all [get]
 func (m *ModuleController) ModuleGetAll(c *fiber.Ctx) error {
 	modules, err := m.ModuleService.ModuleGetAll()
 	if err != nil {
@@ -44,6 +63,17 @@ func (m *ModuleController) ModuleGetAll(c *fiber.Ctx) error {
 	})
 }
 
+// ModuleCreate godoc
+//
+//	@Summary		ModuleCreate
+//	@Description	Crear nuevo modulo
+//	@Tags			Module
+//	@Accept			json
+//	@Produce		json
+//	@Security		CookieAuth
+//	@Param			body	body		schemas.ModuleCreate	true	"Modulo"
+//	@Success		200		{object}	schemas.Response		"ExpenseOther obtained successfully"
+//	@Router			/api/v1/module/create [post]
 func (m *ModuleController) ModuleCreate(c *fiber.Ctx) error {
 	var moduleCrate schemas.ModuleCreate
 	if err := c.BodyParser(&moduleCrate); err != nil {
@@ -70,6 +100,17 @@ func (m *ModuleController) ModuleCreate(c *fiber.Ctx) error {
 	})
 }
 
+// ModuleUpdate godoc
+//
+//	@Summary		ModuleUpdate
+//	@Description	Editar modulo
+//	@Tags			Module
+//	@Accept			json
+//	@Produce		json
+//	@Security		CookieAuth
+//	@Param			body	body		schemas.ModuleUpdate	true	"Modulo"
+//	@Success		200		{object}	schemas.Response		"ExpenseOther obtained successfully"
+//	@Router			/api/v1/module/update [put]
 func (m *ModuleController) ModuleUpdate(c *fiber.Ctx) error {
 	var moduleUpdate schemas.ModuleUpdate
 	if err := c.BodyParser(&moduleUpdate); err != nil {
@@ -100,6 +141,17 @@ func (m *ModuleController) ModuleDelete(c *fiber.Ctx) error {
 	return nil
 }
 
+// ModuleAddTenant godoc
+//
+//	@Summary		ModuleAddTenant
+//	@Description	Agregar un modulo a tenant
+//	@Tags			Module
+//	@Accept			json
+//	@Produce		json
+//	@Security		CookieAuth
+//	@Param			body	body		schemas.ModuleAddTenant	true	"Modulo"
+//	@Success		200		{object}	schemas.Response		"ExpenseOther obtained successfully"
+//	@Router			/api/v1/module/add_tenant_expiration [put]
 func (m *ModuleController) ModuleAddTenant(c *fiber.Ctx) error {
 	var moduleAddTenant schemas.ModuleAddTenant
 	if err := c.BodyParser(&moduleAddTenant); err != nil {
