# cmd/api/routes/module.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"github.com/SaltaGet/NOA-GESTION-BACK/cmd/api/controllers"
+	"github.com/SaltaGet/NOA-GESTION-BACK/cmd/api/middleware"
 	"github.com/gofiber/fiber/v2"
 )
 
@@ -10,13 +11,13 @@ func ModuleRoutes(app *fiber.App, ctrl *controllers.ModuleController) {
 
 	module.Get("/get_all", ctrl.ModuleGetAll)
 
-	module.Post("/create", ctrl.ModuleCreate)
+	module.Post("/create", middleware.AdminAuthMiddleware(), ctrl.ModuleCreate)
 
-	module.Put("/update", ctrl.ModuleUpdate)
+	module.Put("/update", middleware.AdminAuthMiddleware(), ctrl.ModuleUpdate)
 
-	module.Post("/add_tenant_expiration", ctrl.ModuleAddTenant)
+	module.Put("/add_tenant_expiration", middleware.AdminAuthMiddleware(), ctrl.ModuleAddTenant)
 	
-	module.Delete("/delete/:id", ctrl.ModuleDelete)
+	module.Delete("/delete/:id", middleware.AdminAuthMiddleware(), ctrl.ModuleDelete)
 
-	module.Get("/get/:id", ctrl.ModuleGet)
+	module.Get("/get/:id", middleware.AdminAuthMiddleware(), ctrl.ModuleGet)
 }
