# internal/schemas/module.go
@@ -8,27 +8,27 @@ import (
 )
 
 type ModuleResponse struct {
-	ID                     int64   `gorm:"primaryKey;autoIncrement" json:"id"`
-	Name                   string  `gorm:"not null;uniqueIndex" json:"name"`
-	PriceMonthly           float64 `gorm:"type:decimal(10,2)" json:"price"`
-	PriceYearly            float64 `gorm:"type:decimal(10,2)" json:"price_yearly"`
-	Description            string  `gorm:"type:text" json:"description"`
-	Features               string  `gorm:"type:text" json:"features,omitempty"`
-	AmountImagesPerProduct int32   `gorm:"not null" json:"amount_images_per_product"`
+	ID                     int64   `json:"id"`
+	Name                   string  `json:"name"`
+	PriceMonthly           float64 `json:"price"`
+	PriceYearly            float64 `json:"price_yearly"`
+	Description            string  `json:"description"`
+	Features               string  `json:"features,omitempty"`
+	AmountImagesPerProduct int32   `json:"amount_images_per_product"`
 }
 
 type ModuleResponseDTO struct {
-	ID                     int64      `gorm:"primaryKey;autoIncrement" json:"id"`
-	Name                   string     `gorm:"not null;uniqueIndex" json:"name"`
-	AmountImagesPerProduct int32      `gorm:"not null" json:"amount_images_per_product"`
-	Expiration             *time.Time `gorm:"" json:"expiration"`
+	ID                     int64      `json:"id"`
+	Name                   string     `json:"name"`
+	AmountImagesPerProduct int32      `json:"amount_images_per_product"`
+	Expiration             *time.Time `json:"expiration"`
 }
 
 type ModuleCreate struct {
 	Name                   string  `json:"name" validate:"required" example:"Module1"`
 	PriceMonthly           float64 `json:"price" validate:"required,gte=0" example:"100.00"`
 	PriceYearly            float64 `json:"price_yearly" validate:"required,gte=0" example:"1000.00"`
-	Description            *string  `json:"description" example:"description"`
+	Description            *string `json:"description" example:"description"`
 	Features               string  `json:"features,omitempty" example:"features"`
 	AmountImagesPerProduct int32   `json:"amount_images_per_product" validate:"required" example:"1"`
 }
@@ -54,7 +54,7 @@ type ModuleUpdate struct {
 	Name                   string  `json:"name" validate:"required" example:"Module1"`
 	PriceMonthly           float64 `json:"price" validate:"required,gte=0" example:"100.00"`
 	PriceYearly            float64 `json:"price_yearly" validate:"required,gte=0" example:"1000.00"`
-	Description            *string  `json:"description" example:"description"`
+	Description            *string `json:"description" example:"description"`
 	Features               string  `json:"features,omitempty" example:"features"`
 	AmountImagesPerProduct int32   `json:"amount_images_per_product" validate:"required" example:"1"`
 }
@@ -76,8 +76,8 @@ func (m *ModuleUpdate) Validate() error {
 }
 
 type ModuleAddTenant struct {
-	ModuleID int64 `json:"module_id" validate:"required" example:"1"`
-	TenantID int64 `json:"tenant_id" validate:"required" example:"1"`
+	ModuleID   int64  `json:"module_id" validate:"required" example:"1"`
+	TenantID   int64  `json:"tenant_id" validate:"required" example:"1"`
 	Expiration string `json:"expiration" validate:"required,datetime=2006-01-02" example:"2023-01-01"`
 }
 
